# TheGrid

./: Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: push-docker-image.yaml  run-tests.yaml
benchmarks/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py
grid/: __init__.py  constants.py  data_structures.py  dht_utils.py
grid/cli/: run_dht.py  run_prod_server.sh  run_server.py
grid/client/: __init__.py  from_pretrained.py  inference_session.py  lm_head.py  ptune.py  remote_forward_backward.py  remote_generation.py  remote_sequential.py  sequential_autograd.py
grid/client/routing/: sequence_info.py  sequence_manager.py  spending_policy.py
grid/models/: __init__.py
grid/models/bloom/: __init__.py  config.py  model.py
grid/models/llama/: __init__.py  config.py  model.py
grid/server/: backend.py  block_selection.py  block_utils.py  from_pretrained.py  handler.py  memory_cache.py  reachability.py  server.py  throughput.py
grid/utils/: __init__.py  auto_config.py  convert_block.py  disk_cache.py  logging.py  peft.py  version.py
tests/: test_aux_functions.py  test_block_exact_match.py  test_chained_calls.py  test_dtype.py  test_full_model.py  test_peft.py  test_priority_pool.py  test_remote_sequential.py  test_sequence_manager.py  test_server_stats.py  test_tensor_parallel.py
