[tool.poetry]
name = "the-grid"
version = "0.1.0"
description = "Easy way to efficiently run 100B+ language models without high-end GPUs"
authors = ["Grid Developers <https://discord.gg/qUtxnK2NMf>"]
homepage = "https://github.com/kyegomez/thegrid"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.12"
bitsandbytes = "==0.40.1.post1"
accelerate = ">=0.20.3,<0.21.0"
huggingface-hub = ">=0.11.1,<1.0.0"
tokenizers = ">=0.13.3"
transformers = ">=4.31.0,<5.0.0"
speedtest-cli = "==2.1.3"
pydantic = ">=1.10,<2.0"
hivemind = "==1.1.9"
tensor_parallel = "==1.0.23"
humanfriendly = "*"
async-timeout = ">=4.0.2"
cpufeature = ">=0.2.0"
packaging = ">=20.9"
sentencepiece = ">=0.1.99"
peft = ">=0.4.0"
safetensors = ">=0.3.1"
Dijkstar = ">=2.6.0"

[tool.poetry.dev-dependencies]
pytest = "==6.2.5"
pytest-forked = "*"
pytest-asyncio = "==0.16.0"
black = "==22.3.0"
isort = "==5.10.1"
psutil = "*"

[
tool.poetry.packages
]
name = "grid"
path = "grid/"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]